--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,7 @@ body {
 legend {
     background: purple; border-radius: 10px; color: white; padding: 12px;
 }
+
+fieldset {
+    background: lavender; border: 10px solid darkblue; border-radius: 20px; margin-bottom: 10px; width: 720px;
+}
