--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,19 @@ legend {
 fieldset {
     background: lavender; border: 10px solid darkblue; border-radius: 20px; margin-bottom: 10px; width: 720px;
 }
+
+label {
+    display: inline-block; text-align: right; vertical-align: top; width: 200px;
+}
+
+input[type="radio"] {
+    width: auto;
+}
+
+.range-caption {
+    background: darkcyan; color: white; padding: 6px; text-align: center;
+}
+
+input[type="submit"] {
+    background: darkcyan; border-radius: 10px; color: white; font-size: 20px; padding: 12px;
+}
