--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ label {
     display: inline-block; text-align: right; vertical-align: top; width: 200px;
 }
 
-input[type="radio"] {
+input[type="radio"]+label, input[type="checkbox"]+label {
     width: auto;
 }
 
