--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,7 @@ input[type="radio"]+label, input[type="checkbox"]+label {
 input[type="submit"] {
     background: darkcyan; border-radius: 10px; color: white; font-size: 20px; padding: 12px;
 }
+
+:hover div {
+    color: blue;
+}
