Added hover element

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,6 @@ input[type="submit"] {
     background: darkcyan; border-radius: 10px; color: white; font-size: 20px; padding: 12px;
 }
 
-:hover div {
+div:hover {
     color: blue;
 }
